fix: [GAMA-271] alignment issue

--- a/src/component/CartItem/CartItem.style.scss
+++ b/src/component/CartItem/CartItem.style.scss
@@ -513,8 +513,8 @@
   }
 
   .EddExpressWrapper {
-    min-width: 280px;
-    max-width: 280px;
+    min-width: 290px;
+    max-width: 290px;
     .eddExpressDelivery{
       margin-top: 0;
     }
